# MyWeChatServer_Linux

MyWeChatServer_Linux/: ClientTest.cpp  cscope.in.out  cscope.out  cscope.po.out  tags
MyWeChatServer_Linux/Client/: Client  ClientTest.cpp  Test  Test.cpp  server  server.cpp
MyWeChatServer_Linux/headfiles/: MyEpollPort.h  accountDatabase.h  chatServer.h  contacts.h  fileServer.h  fileTrans.h  friendServer.h  global.h  logInServer.h  message.h  myThreadPool.h  registerServer.h  server.h  serverHandler.h  user.h  xmlHandler.h
MyWeChatServer_Linux/server/: CMakeCache.txt  CMakeLists.txt  EpollServer  Makefile  MyEpollPort.cpp  MyEpollPort.h  cmake_install.cmake  main.cpp
MyWeChatServer_Linux/sourcefiles/: CMakeCache.txt  CMakeLists.txt  EpollServer  Makefile  MyEpollPort.cpp  accountDatabase.cpp  chatServer.cpp  cmake_install.cmake  contacts.cpp  fileServer.cpp  friendServer.cpp  global.cpp  libmysqlclient.so.20  logInServer.cpp  main.cpp  message.cpp  myThreadPool.cpp  registerServer.cpp  serverHandler.cpp  user.cpp  xmlHandler.cpp
